+ (CMS) Fixed issue where the “Item Title” text disappears in both Dark Mode and Light Mode when the browser window is reduced to smaller widths. Updated chevron icon. (Fixes #6585)

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -10124,6 +10124,15 @@ ul.activeusers {
   color: var(--color-interface-strong);
 }
 
+.navbar-static-side .navbar-side .nav-item-top.open .item-title,
+.navbar-static-side .navbar-side .nav-item-top.open .nav-childpages li.title {
+  color: var(--color-interface-stronger);
+}
+.navbar-static-side .navbar-side .nav-item-top.open .item-title i,
+.navbar-static-side .navbar-side .nav-item-top.open .nav-childpages li.title i {
+  color: var(--color-interface-strong);
+}
+
 a.rock-bookmark {
   color: var(--color-interface-strong);
 }
